--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,12 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth": "3.2.0",
     "@redwoodjs/forms": "3.2.0",
     "@redwoodjs/router": "3.2.0",
     "@redwoodjs/web": "3.2.0",
+    "@simplewebauthn/browser": "^6.3.0-alpha.1",
+    "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
